{
  "version": 4,
  "terraform_version": "0.12.19",
  "serial": 27,
  "lineage": "5ac41958-ca6d-22f8-5b1e-d3b0d10cdfef",
  "resources": [
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:766488873815:security-group/sg-0d0252196f9b56796",
            "description": "EKS cluster security group.",
            "egress": [],
            "id": "sg-0d0252196f9b56796",
            "ingress": [],
            "name": "my-cluster20200701000557682600000001",
            "name_prefix": "my-cluster",
            "owner_id": "766488873815",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-cluster-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08323a3a6c5af6500"
          }
        }
      ]
    },
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:766488873815:security-group/sg-0e890271a880a3067",
            "description": "Security group for all nodes in the cluster.",
            "egress": [],
            "id": "sg-0e890271a880a3067",
            "ingress": [],
            "name": "my-cluster20200701001850530700000005",
            "name_prefix": "my-cluster",
            "owner_id": "766488873815",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-cluster-eks_worker_sg",
              "kubernetes.io/cluster/my-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-08323a3a6c5af6500"
          },
          "dependencies": [
            "module.my-cluster.aws_cloudwatch_log_group.this",
            "module.my-cluster.aws_eks_cluster.this",
            "module.my-cluster.aws_iam_role.cluster",
            "module.my-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.my-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.my-cluster.aws_security_group.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-2676477501",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0d0252196f9b56796",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.my-cluster.aws_security_group.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-2655196796",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d0252196f9b56796",
            "self": false,
            "source_security_group_id": "sg-0e890271a880a3067",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.my-cluster.aws_cloudwatch_log_group.this",
            "module.my-cluster.aws_eks_cluster.this",
            "module.my-cluster.aws_iam_role.cluster",
            "module.my-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.my-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.my-cluster.aws_security_group.cluster",
            "module.my-cluster.aws_security_group.workers"
          ]
        }
      ]
    },
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_private_access",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-3725673795",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0e890271a880a3067",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.my-cluster.aws_cloudwatch_log_group.this",
            "module.my-cluster.aws_eks_cluster.this",
            "module.my-cluster.aws_iam_role.cluster",
            "module.my-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.my-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.my-cluster.aws_security_group.cluster",
            "module.my-cluster.aws_security_group.workers"
          ]
        }
      ]
    },
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-1197811956",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e890271a880a3067",
            "self": false,
            "source_security_group_id": "sg-0d0252196f9b56796",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "module.my-cluster.aws_cloudwatch_log_group.this",
            "module.my-cluster.aws_eks_cluster.this",
            "module.my-cluster.aws_iam_role.cluster",
            "module.my-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.my-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.my-cluster.aws_security_group.cluster",
            "module.my-cluster.aws_security_group.workers"
          ]
        }
      ]
    },
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-460799115",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e890271a880a3067",
            "self": false,
            "source_security_group_id": "sg-0d0252196f9b56796",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.my-cluster.aws_cloudwatch_log_group.this",
            "module.my-cluster.aws_eks_cluster.this",
            "module.my-cluster.aws_iam_role.cluster",
            "module.my-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.my-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.my-cluster.aws_security_group.cluster",
            "module.my-cluster.aws_security_group.workers"
          ]
        }
      ]
    },
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_kubelet",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-1974455225",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0e890271a880a3067",
            "self": false,
            "source_security_group_id": "sg-0e890271a880a3067",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "module.my-cluster.aws_cloudwatch_log_group.this",
            "module.my-cluster.aws_eks_cluster.this",
            "module.my-cluster.aws_iam_role.cluster",
            "module.my-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.my-cluster.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.my-cluster.aws_security_group.cluster",
            "module.my-cluster.aws_security_group.workers"
          ]
        }
      ]
    }
  ]
}